# project_sugar

./: .gitignore  README.md  Untitled.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Kiosk/: settings.gradle
SugarWindow/: settings.gradle
TabletKiosk/: settings.gradle
ansible/: README.md  camera_controller.yaml  camera_monitor.yaml  fileserver.yaml  inventory.yaml  mediamtx_server.yaml  problem.txt  prometheus_node_exporter.yaml  site.yaml  watchdog.yaml
camera_controller/: camera_config_default.json  camera_config_primemover.json  camera_controller.py  config_default.json  install.sh  mqtt_connection.py  requirements.txt  service.template  sudoers.template
camera_monitor/: .gitignore  README.md  camera_monitor.py  common.py  controller.py  file_mover.py  frame_buffer.py  mqtt_configuration.py  mqtt_connection.py  mqtt_monitor.py  requirements.txt  snapshot_writer.py  stream_configuration.py  stream_reader.py  stream_writer.py
esp-camera/esp32s3-xiao/xiao-cam/: Cargo.toml  cfg.toml
esp-camera/esp32s3-xiao/xiao-cam/src/: main.rs
opencv-rtsp/: .gitignore  capture_audio_mqtt.py  capture_function.py  capture_on_mqtt.py  capture_performance.py  capture_process.py  capture_simple_process.py  capture_simple_thread.py  cv2_playground.py  retrieve.sh  simple_display.py  start_cameras.sh  timestamps.py
stream_rtsp_server/: README.md  install.sh  mediamtx_raspberrypi.yml  picam04-mediamtx.yml  run_stream_camera0.sh  service.template
tof_camera_streamer/: Makefile  frame_util.py  gst_target.cpp  gst_target.hpp  tof_camera.cpp  tof_camera_streamer.py
(+55 files in other folders)
